; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/q68/extr_q68-jit.c_opLINK.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/q68/extr_q68-jit.c_opLINK.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INSN_GET_REG0 = common dso_local global i32 0, align 4
@current_entry = common dso_local global i32 0, align 4
@FAULT_STATUS_IN_DATA = common dso_local global i32 0, align 4
@FAULT_STATUS_RW_WRITE = common dso_local global i32 0, align 4
@reg0 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @opLINK to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @opLINK(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @INSN_GET_REG0, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @IFETCH(i32* %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* @current_entry, align 4
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @FAULT_STATUS_IN_DATA, align 4
  %12 = load i32, i32* @FAULT_STATUS_RW_WRITE, align 4
  %13 = or i32 %11, %12
  %14 = call i32 @JIT_EMIT_CHECK_ALIGNED_SP(i32 %9, i32 %10, i32 %13)
  %15 = load i32, i32* @current_entry, align 4
  %16 = load i32, i32* @reg0, align 4
  %17 = add nsw i32 8, %16
  %18 = mul nsw i32 %17, 4
  %19 = call i32 @JIT_EMIT_GET_OP1_REGISTER(i32 %15, i32 %18)
  %20 = load i32, i32* @current_entry, align 4
  %21 = call i32 @JIT_EMIT_PUSH_L(i32 %20)
  %22 = load i32, i32* @current_entry, align 4
  %23 = call i32 @JIT_EMIT_GET_OP1_REGISTER(i32 %22, i32 60)
  %24 = load i32, i32* @current_entry, align 4
  %25 = call i32 @JIT_EMIT_MOVE_L(i32 %24)
  %26 = load i32, i32* @current_entry, align 4
  %27 = load i32, i32* @reg0, align 4
  %28 = add nsw i32 8, %27
  %29 = mul nsw i32 %28, 4
  %30 = call i32 @JIT_EMIT_SET_REGISTER_L(i32 %26, i32 %29)
  %31 = load i32, i32* @current_entry, align 4
  %32 = load i32, i32* %5, align 4
  %33 = call i32 @JIT_EMIT_GET_OP2_IMMEDIATE(i32 %31, i32 %32)
  %34 = load i32, i32* @current_entry, align 4
  %35 = call i32 @JIT_EMIT_ADD_L(i32 %34)
  %36 = load i32, i32* @current_entry, align 4
  %37 = call i32 @JIT_EMIT_SET_REGISTER_L(i32 %36, i32 60)
  %38 = load i32, i32* @current_entry, align 4
  %39 = call i32 @JIT_EMIT_ADD_CYCLES(i32 %38, i32 16)
  ret i32 0
}

declare dso_local i32 @IFETCH(i32*) #1

declare dso_local i32 @JIT_EMIT_CHECK_ALIGNED_SP(i32, i32, i32) #1

declare dso_local i32 @JIT_EMIT_GET_OP1_REGISTER(i32, i32) #1

declare dso_local i32 @JIT_EMIT_PUSH_L(i32) #1

declare dso_local i32 @JIT_EMIT_MOVE_L(i32) #1

declare dso_local i32 @JIT_EMIT_SET_REGISTER_L(i32, i32) #1

declare dso_local i32 @JIT_EMIT_GET_OP2_IMMEDIATE(i32, i32) #1

declare dso_local i32 @JIT_EMIT_ADD_L(i32) #1

declare dso_local i32 @JIT_EMIT_ADD_CYCLES(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
